...
		val collectionData = MutableCollectionData(Time.nowMillis)
		val location = Location(collectionData.time, 15.0, 15.0, 123.0, 6f, 3f, 10f, 15f)
		collectionData.location = location
		collectionData.activity = ActivityInfo(DetectedActivity.RUNNING, 75)
		collectionData.wifi = WifiData(location, Time.nowMillis, listOf(WifiInfo(), WifiInfo(), WifiInfo()))
		collectionData.cell = CellData(
				listOf(CellInfo(NetworkOperator("123", "321", "MOCK"), 123456, CellType.LTE, 90, -30, 0)), 8)

		val session = TrackerSession(0, Time.nowMillis - 5 * Time.MINUTE_IN_MILLISECONDS, Time.nowMillis, true, 56,
				5410f, 15f, 5000f, 154)

		updateData(CollectionDataEcho(collectionData, session))
	}
...
